# cDNS

./: .gitignore  CMakeLists.txt  README.md  config.toml
docs/: query_details.md  req_res_template.md
includes/: config.h
includes/protocol/: free.h  parser.h
scripts/: format.sh
src/: config.c  main.c
src/protocol/: free.c  parser.c
